Actions
Bug #19262
closedSegmentation fault on RubyVM::AbstractSyntaxTree.node_id_for_backtrace_location
Bug #19262:
Segmentation fault on RubyVM::AbstractSyntaxTree.node_id_for_backtrace_location
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.2.0 (2022-12-25 revision a528908271) [arm64-darwin21]
Updated by yui-knk (Kaneko Yuichiro) over 3 years ago
- Status changed from Open to Closed
Applied in changeset git|979dd02e2f0a70f3f30d47c6115780d8fac6147e.
Check if the argument is Thread::Backtrace::Location object
[Bug #19262]
Updated by yui-knk (Kaneko Yuichiro) over 3 years ago
- Backport changed from 2.7: UNKNOWN, 3.0: UNKNOWN, 3.1: UNKNOWN to 2.7: DONTNEED, 3.0: DONTNEED, 3.1: DONTNEED, 3.2: REQUIRED
Updated by naruse (Yui NARUSE) over 3 years ago
- Backport changed from 2.7: DONTNEED, 3.0: DONTNEED, 3.1: DONTNEED, 3.2: REQUIRED to 2.7: DONTNEED, 3.0: DONTNEED, 3.1: DONTNEED, 3.2: DONE
ruby_3_2 1a2447ac9925e7794a7c5aa07960ad4de08e6aca merged revision(s) 979dd02e2f0a70f3f30d47c6115780d8fac6147e.
Actions