Check if the argument is Thread::Backtrace::Location object

[Bug #19262]