ast.c
@@ -2,6 +2,7 @@
 #include "internal.h"
 #include "internal/parse.h"
 #include "internal/symbol.h"
+#include "internal/vm.h"
 #include "internal/warnings.h"
 #include "iseq.h"
 #include "node.h"
@@ -202,6 +203,10 @@ static VALUE
 node_id_for_backtrace_location(rb_execution_context_t *ec, VALUE module, VALUE location)
 {
     int node_id;
+
+    if (!rb_obj_is_kind_of(location, rb_cBacktraceLocation)) {
+        rb_raise(rb_eTypeError, "Thread::Backtrace::Location object expected");
+    }
     node_id = rb_get_node_id_from_frame_info(location);
     if (node_id == -1) {
         return Qnil;
